# Schengen-Borders-Information-Scraper

./: .gitignore  LICENCE  README.md  pyproject.toml
src/: schengenbc.py
src/Schengen_Borders_Information_Scraper/: __init__.py
src/schengen_border_control/: schengen_scraper.py
src/schengen_border_control.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
