#[build-system]
#requires = ["setuptools>=61.0", "requests>=2.31.0", "beautifulsoup4>=4.12.2"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling", "requests", "beautifulsoup4"]
build-backend = "hatchling.build"

[project]
name = "Schengen_Borders_Information_Scraper"
version = "0.0.1"
authors = [
  { name="Markus Stuppnig", email="accounts@stuppnig.net" },
]
description = "This Python script scrapes information about temporary reintroduction of border control in the Schengen Area from the European Commission's website."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests>=2.31.0',
  'beautifulsoup4>=4.12.2',
]

[project.urls]
"Homepage" = "https://github.com/Markus-Stuppnig/Schengen-Borders-Information-Scraper"
"Bug Tracker" = "https://github.com/Markus-Stuppnig/Schengen-Borders-Information-Scraper/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]